manifests/backend-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "blog-backend"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "backend"
  template:
    metadata:
      labels:
        app: "backend"
    spec:
      containers:
        - name: "blog-backend"
          image: "simple2frontend.azurecr.io/kube-backend"
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: "blog-backend"
  labels:
    app: "backend"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: "backend"
