manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "blog-frontend"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - name: "blog-frontend"
          image: "simple2frontend.azurecr.io/kube"
          ports:
          - containerPort: 8080
          - targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: "blog-frontend"
  labels:
    app: "frontend"
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: "frontend"
